# Hackathon1

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists_explain.txt  README.md  build.sh  config.h.cmake  rpc-rl.yml
.github/workflows/: linux.yml
UI/: convert_pkl2mcap.py
UI/foxglove/: UI_launcher.py
binding/pycontroller/: CMakeLists.txt
binding/pycontroller/crab_controller/: CMakeLists.txt  crab_interface_pybind_pin.cpp
binding/pycontroller/g1_controller/: g1_interface_pybind_pin.cpp
controller/: CMakeLists.txt
controller/crab_controller/: CMakeLists.txt  crab_control_architecture.cpp  crab_control_architecture.hpp  crab_controller.cpp  crab_controller.hpp  crab_data_manager.cpp  crab_data_manager.hpp  crab_definition.hpp  crab_interface.cpp  crab_interface.hpp  crab_state_estimator.cpp  crab_state_estimator.hpp  crab_state_provider.cpp  crab_state_provider.hpp  crab_task_gain_handler.cpp  crab_task_gain_handler.hpp  crab_tci_container.cpp  crab_tci_container.hpp  state_estimator.hpp
controller/crab_controller/crab_state_machines/: approach.cpp  approach.hpp  contact.cpp  contact.hpp  initialize.cpp  initialize.hpp  land.cpp  land.hpp  reorient.cpp  reorient.hpp
controller/crab_controller/crab_task/: crab_com_xy_task.cpp  crab_com_xy_task.hpp  crab_com_z_task.cpp  crab_com_z_task.hpp
controller/draco_controller/: draco_data_manager.cpp  draco_data_manager.hpp  draco_interface.cpp  draco_interrupt_handler.cpp
controller/draco_controller/draco_state_machines/: initialize.cpp
controller/draco_controller/draco_state_machines_wbic/: mpc_locomotion.cpp
controller/g1_controller/: CMakeLists.txt  _checklist.txt  g1_control_architecture.cpp  g1_control_architecture.hpp  g1_control_architecture_wbic.cpp  g1_control_architecture_wbic.hpp  g1_controller.cpp  g1_controller.hpp  g1_data_manager.cpp  g1_data_manager.hpp  g1_definition.hpp  g1_interface.cpp  g1_interface.hpp  g1_interrupt_handler.cpp  g1_interrupt_handler.hpp  g1_kf_state_estimator.cpp  g1_kf_state_estimator.hpp  g1_state_estimator.cpp  g1_state_estimator.hpp  g1_state_provider.cpp  g1_state_provider.hpp  g1_task_gain_handler.cpp  g1_task_gain_handler.hpp  g1_tci_container.cpp  g1_tci_container.hpp  state_estimator.hpp
controller/g1_controller/g1_crbi/: g1_composite_rigid_body_inertia.cpp  g1_composite_rigid_body_inertia.hpp  g1_crbi_helper.c  g1_crbi_helper.h
controller/g1_controller/g1_state_machines/: contact_transition_end.cpp  contact_transition_end.hpp  contact_transition_start.cpp  contact_transition_start.hpp  double_support_balance.cpp  double_support_balance.hpp  double_support_stand_up.cpp  double_support_stand_up.hpp  double_support_swaying.cpp  double_support_swaying.hpp  initialize.cpp  initialize.hpp  single_support_swing.cpp  single_support_swing.hpp
controller/g1_controller/g1_state_machines_wbic/: contact_transition_end.cpp  contact_transition_end.hpp  contact_transition_start.cpp  contact_transition_start.hpp  double_support_balance.cpp  double_support_balance.hpp  double_support_stand_up.cpp  double_support_stand_up.hpp  double_support_swaying.cpp  double_support_swaying.hpp  initialize.cpp  initialize.hpp  mpc_locomotion.cpp  mpc_locomotion.hpp  single_support_swing.cpp  single_support_swing.hpp
controller/g1_controller/g1_task/: g1_cam_task.cpp  g1_cam_task.hpp  g1_com_task.cpp  g1_com_task.hpp  g1_com_xy_task.cpp  g1_com_xy_task.hpp  g1_com_z_task.cpp  g1_com_z_task.hpp  g1_wbo_task.cpp  g1_wbo_task.hpp  g1_wbo_task_helper.cpp
controller/robot_system/: pinocchio_robot_system.cpp  pinocchio_robot_system.hpp
controller/whole_body_controller/: task.hpp
controller/whole_body_controller/ihwbc/: ihwbc.cpp  ihwbc.hpp
controller/whole_body_controller/managers/: cubic_bezier_trajectory_manager.cpp  cubic_bezier_trajectory_manager.hpp  end_effector_trajectory_manager.cpp  floating_base_trajectory_manager.cpp
data_example/: g1_knee_knocker.pkl
messages/: CMakeLists.txt  crab.proto  draco.proto  g1.proto
mujoco/include/mujoco/: mjui.h
planner/locomotion/dcm_planner/: dcm_planner.hpp
plot/: helper.py  protobuf_to_dict.py
plot/crab/: crab_data_manager.py  geometry_test.py  plot_joint_limits.py
plot/draco/: draco_data_manager_mpc.py  experiment_replay.py  plot_angvel_tracking.py  plot_floating_base.py  plot_velocity_tracking.py
plot/rad_arm/: rad_arm_viewer.py
rl/: test_rl.py  train_rl.py
rl/config/: crab_config.py
rl/envs/: __init__.py  crab.py
rl/utils/: crab_constants.py  crab_utils.py  train_utils.py
robot_model/crab/: blue_ball.urdf  crab.urdf  crab.xml  crab_fewer_collisions.xml  crab_new.urdf  crab_old.urdf  cylinder.urdf  green_ball.urdf  link_joint_idx.txt  orange_ball.urdf  rad_arm.urdf  red_ball.urdf
robot_model/crab/meshes/: base_link.stl  cluster_5555_distal_link.stl  cluster_5555_proximal_link.stl  cluster_5555_wrist_link.stl  cluster_665_distal_link.stl  cluster_665_end_link.stl  cluster_665_proximal_link.stl  cluster_776_distal_link.stl  cluster_776_end_link.stl  cluster_776_proximal_link.stl
robot_model/g1/: g1.urdf  g1.xml  g1_29dof_lock_waist.urdf  g1_29dof_lock_waist.xml  g1_simple_collisions.urdf  scene.xml  wing_scene.xml
robot_model/g1/assets/: g1_scene.xml
robot_model/g1/config/: g1_cube_points.srdf  g1_simple.srdf
robot_model/rad_arm/: rad_arm.urdf
robot_model/world_description/: vertical_stabilizer.xml
robot_model/world_description/meshes/: v_stabilizer.stl
simulator/mujoco/: CMakeLists.txt
simulator/mujoco/g1/: CMakeLists.txt  main.cc
simulator/mujoco/g1/simulate/: simulate.cc
simulator/pybullet/: crab_pid_test.py  crab_pybullet_fns.py  crab_pybullet_sandbox.py  crab_robot_main.py  crab_robot_main_go2.py  crab_robot_sandbox.py  draco_main.py  draco_main_wbic.py  draco_test_cmds.py  g1_main.py  plot_joint_limits.py  robot_pinocchio_idx.py  robot_pybullet_idx.py  test.py  test_robot_idx.py
test/: crab_test.cpp
util/: CMakeLists.txt  interpolation.cpp  interpolation.hpp  util.cpp  util.hpp
util/mujoco_utils/include/: mujoco_utils.hpp
util/mujoco_utils/src/: mujoco_utils.cpp
(+41 files in other folders)
